Add endpoint /locations/{locationId}/pathoflegend/players