@@ -34,17 +34,25 @@ import lombok.extern.slf4j.Slf4j;
 import org.apache.http.Header;
 import org.apache.http.HttpMessage;
 import org.apache.http.HttpResponse;
+import org.apache.http.ProtocolVersion;
 import org.apache.http.StatusLine;
 import org.apache.http.client.HttpClient;
 import org.apache.http.client.methods.HttpGet;
+import org.apache.http.entity.StringEntity;
 import org.apache.http.impl.client.HttpClientBuilder;
+import org.apache.http.message.BasicHttpResponse;
+import org.apache.http.message.BasicStatusLine;
 
 import java.io.BufferedReader;
+import java.io.File;
 import java.io.IOException;
 import java.io.InputStreamReader;
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.time.Duration;
 import java.util.ArrayList;
+import java.util.Date;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Locale;
@@ -52,6 +60,10 @@ import java.util.Map;
 
 @Slf4j
 public class StandardConnector implements Connector {
+
+    public static final Duration CACHE_TIMEOUT = Duration.ofMinutes(5);
+
+    public static final boolean CACHE = true;
 
     private static final Gson GSON = new GsonBuilder().disableHtmlEscaping().create();
 
@@ -68,8 +80,8 @@ public class StandardConnector implements Connector {
         }
     }
 
-    private static String encode(String s) throws UnsupportedEncodingException {
-        return URLEncoder.encode(s, "UTF-8");
+    private static String encode(String s) {
+        return URLEncoder.encode(s, UTF_8);
     }
 
     private static HttpGet createRequest(String url, String apiKey) {
@@ -88,24 +100,63 @@ public class StandardConnector implements Connector {
                             url,
                             requestContext.getRequest().getQueryParameters(),
                             requestContext.getRequest().getRestParameters());
-            HttpClient client = HttpClientBuilder.create().build();
-            HttpGet request = createRequest(replacedUrl, requestContext.getApiKey());
-            HttpResponse response = client.execute(request);
-            logResponse(response);
-            StatusLine statusLine = response.getStatusLine();
-            if (statusLine.getStatusCode() != SC_OK) {
-                throw new ConnectorException(statusLine.toString());
-            }
-            StringBuilder content = new StringBuilder();
-            try (BufferedReader rd =
-                    new BufferedReader(
-                            new InputStreamReader(response.getEntity().getContent(), UTF_8))) {
-                String line;
-                while ((line = rd.readLine()) != null) {
-                    content.append(line);
+            String json = null;
+            boolean makeRequest = true;
+            if (CACHE) {
+                String hash = String.valueOf(replacedUrl.hashCode());
+                Path path = Files.createTempFile(hash, ".json");
+                File file = path.toFile();
+                if (file.exists()) {
+                    long millis = file.lastModified();
+                    json = Files.readString(path);
+                    makeRequest =
+                            json == null
+                                    || json.isEmpty()
+                                    || millis + CACHE_TIMEOUT.toMillis() < new Date().getTime();
+                    if (!makeRequest) {
+                        log.info(
+                                "found cached file {} for {}",
+                                path.toFile().getAbsolutePath(),
+                                replacedUrl);
+                    }
                 }
             }
-            String json = content.toString();
+            HttpResponse response;
+            if (makeRequest) {
+                HttpClient client = HttpClientBuilder.create().build();
+                HttpGet request = createRequest(replacedUrl, requestContext.getApiKey());
+                response = client.execute(request);
+                logResponse(response);
+                StatusLine statusLine = response.getStatusLine();
+                if (statusLine.getStatusCode() != SC_OK) {
+                    throw new ConnectorException(statusLine.toString());
+                }
+                StringBuilder content = new StringBuilder();
+                try (BufferedReader rd =
+                        new BufferedReader(
+                                new InputStreamReader(response.getEntity().getContent(), UTF_8))) {
+                    String line;
+                    while ((line = rd.readLine()) != null) {
+                        content.append(line);
+                    }
+                }
+                json = content.toString();
+                if (CACHE) {
+                    String hash = String.valueOf(replacedUrl.hashCode());
+                    Path path = Files.createTempFile(hash, ".json");
+                    Files.writeString(path, json);
+                    log.info(
+                            "save file {} for cache of {}",
+                            path.toFile().getAbsolutePath(),
+                            replacedUrl);
+                }
+            } else {
+                response =
+                        new BasicHttpResponse(
+                                new BasicStatusLine(
+                                        new ProtocolVersion("https", 1, 2), SC_OK, "cached"));
+                response.setEntity(new StringEntity(json));
+            }
             log.info("    response content: {}", json);
             T result = (T) GSON.fromJson(json, requestContext.getResponseClass());
             if (requestContext.getRequest().isStoreRawResponse()) {
@@ -132,8 +183,7 @@ public class StandardConnector implements Connector {
     }
 
     private String appendToUrl(
-            String url, Map<String, Object> parameters, Map<String, Object> restParameters)
-            throws UnsupportedEncodingException {
+            String url, Map<String, Object> parameters, Map<String, Object> restParameters) {
         StringBuilder appendedUrl = new StringBuilder(url);
         List<String> queries = new ArrayList<>();
         if (isNotEmpty(parameters)) {
